[gd_scene load_steps=18 format=3 uid="uid://ddowwg8jkas8d"]

[ext_resource type="Texture2D" uid="uid://d2kq64wnqfjda" path="res://art/Projectiles/projectiles x1.png" id="1_pchwy"]
[ext_resource type="Script" path="res://gameObjects/player/playerWeapons/launcher/rocket.gd" id="1_sj1nk"]
[ext_resource type="Texture2D" uid="uid://ce61w072tsfma" path="res://art/Enemies/enemies x1.png" id="2_gwndl"]
[ext_resource type="AudioStream" uid="uid://brtu2tp1y3hbf" path="res://sfx/Space_Ambience_and_Sound_Pack/Rocket/rocketBoomShort.wav" id="4_1jvyc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wyk6m"]
atlas = ExtResource("1_pchwy")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq1io"]
atlas = ExtResource("1_pchwy")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uhgw"]
atlas = ExtResource("1_pchwy")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0e5o"]
atlas = ExtResource("1_pchwy")
region = Rect2(96, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_atemp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyk6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq1io")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uhgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0e5o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bxewj"]
radius = 6.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xlid6"]
atlas = ExtResource("2_gwndl")
region = Rect2(128, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axfor"]
atlas = ExtResource("2_gwndl")
region = Rect2(160, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvcpr"]
atlas = ExtResource("2_gwndl")
region = Rect2(192, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l45ts"]
atlas = ExtResource("2_gwndl")
region = Rect2(224, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c07pm"]
atlas = ExtResource("2_gwndl")
region = Rect2(288, 640, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_udwt7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlid6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axfor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvcpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l45ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c07pm")
}],
"loop": false,
"name": &"boom",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1kd0h"]
radius = 30.0167

[node name="rocket" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 32
collision_mask = 6
script = ExtResource("1_sj1nk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_atemp")
autoplay = "default"
frame_progress = 0.262144

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bxewj")

[node name="explosion" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="explosion"]
visible = false
scale = Vector2(1.5625, 1.5625)
sprite_frames = SubResource("SpriteFrames_udwt7")
animation = &"boom"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="explosion"]
visible = false
shape = SubResource("CircleShape2D_1kd0h")
disabled = true

[node name="boomSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1jvyc")
volume_db = -10.214
bus = &"SFX"

[connection signal="body_entered" from="explosion" to="." method="_on_explosion_body_entered"]
[connection signal="animation_finished" from="explosion/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
